# react-native-biometrics

./: Biometrics.podspec  CONTRIBUTING.md  LICENSE  README.md  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
android/: build.gradle  gradle.properties
android/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/src/main/java/com/biometrics/: BiometricsModule.kt  BiometricsPackage.kt
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/biometrics/example/: MainActivity.kt  MainApplication.kt
example/ios/: Podfile
example/ios/BiometricsExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/BiometricsExample.xcodeproj/: project.pbxproj
example/ios/BiometricsExample.xcodeproj/xcshareddata/xcschemes/: BiometricsExample.xcscheme
example/src/: App.tsx
ios/: Biometrics.h  Biometrics.mm  BiometricsImpl.swift
shared/Crypto/: CryptoBridge.h
shared/crypto/: CryptoBridge.mm  CryptoHelper.cpp  CryptoHelper.h
src/: NativeBiometrics.ts  index.tsx
